# sksparse_minimal

./: pyproject.toml
.github/workflows/: wheels.yml
src/: cholesky_solver.cpp  cholesky_solver.h  cholespy_core.cpp  docstr.h
src/sksparse_minimal/: __init__.py  main.py  main_test.py
