[project]
name = "sksparse_minimal"
version = "0.3"
description = "A drop in replacement for sksparse for sparse Cholseky factorization"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["cholesky", "sksparse"]
authors = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" }
]
maintainers = [
    {name = "Jeff Quinn", email = "quinnj2@mskcc.org" }
]
dependencies = [
    "numpy",
    "scipy"
]

[build-system]
requires = ["setuptools>=42", "scikit-build-core >=0.4.3", "nanobind >=2.0", "scikit-build==0.14.0", "cmake>=3.18,<4"]
build-backend = "scikit_build_core.build"

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["pytest", "tox"]

[project.urls]
"Homepage" = "https://github.com/tansey-lab/sksparse_minimal"
"Bug Tracker" = "https://github.com/tansey-lab/sksparse_minimal/issues"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
build-verbosity = 1
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32"
archs = ["auto64"]
test-command = "pytest {project}/src/sksparse_minimal"
test-requires = ["pytest", "numpy", "scipy"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.config-settings]
"cmake.define.LAPACK_DIR" = "ext/suitesparse-metis-for-windows/lapack_windows/x64"
